Refactor DTOs and services to organize packages, add plan comment and rating entities with repositories, and enhance itinerary item handling.