@@ -1,7 +1,8 @@
 package dev.thangngo.travelmate.services.impl;
 
-import dev.thangngo.travelmate.dtos.request.ItineraryItemRequest;
-import dev.thangngo.travelmate.dtos.response.ItineraryItemResponse;
+import dev.thangngo.travelmate.dtos.request.itinerary.CreateItineraryItemRequest;
+import dev.thangngo.travelmate.dtos.request.itinerary.UpdateItineraryItemRequest;
+import dev.thangngo.travelmate.dtos.response.itinerary.ItineraryItemResponse;
 import dev.thangngo.travelmate.entities.ItineraryItem;
 import dev.thangngo.travelmate.exceptions.AppException;
 import dev.thangngo.travelmate.exceptions.ErrorCode;
@@ -12,16 +13,16 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
-public class ItinernaryItemServiceImpl implements ItineraryItemService {
+public class ItineraryItemServiceImpl implements ItineraryItemService {
 
     private final ItineraryItemMapper itineraryItemMapper;
     private final ItineraryItemRepository itineraryItemRepository;
 
-    public ItinernaryItemServiceImpl(ItineraryItemMapper itineraryItemMapper, ItineraryItemRepository itineraryItemRepository) {
+    public ItineraryItemServiceImpl(ItineraryItemMapper itineraryItemMapper,
+                                    ItineraryItemRepository itineraryItemRepository) {
         this.itineraryItemMapper = itineraryItemMapper;
         this.itineraryItemRepository = itineraryItemRepository;
     }
@@ -31,21 +32,31 @@ public class ItinernaryItemServiceImpl implements ItineraryItemService {
         List<ItineraryItem> itineraryItems = itineraryItemRepository.findByPlanId(planId);
         return itineraryItems.stream()
                 .map(itineraryItemMapper::toItineraryItemResponse)
-                .collect(Collectors.toList());
-
+                .toList();
     }
 
     @Override
     public ItineraryItemResponse getItineraryItemById(Long id) {
         ItineraryItem itineraryItem = itineraryItemRepository.findById(id)
-                .orElseThrow(() -> new IllegalArgumentException("Itinerary item not found"));
+                .orElseThrow(() -> new AppException(ErrorCode.ITINERARY_ITEM_NOT_FOUND));
         return itineraryItemMapper.toItineraryItemResponse(itineraryItem);
     }
 
     @Override
-    public ItineraryItemResponse createItineraryItem(ItineraryItemRequest itineraryItemRequest) {
-        ItineraryItem itineraryItem = itineraryItemMapper.toItineraryItem(itineraryItemRequest);
+    public ItineraryItemResponse createItineraryItem(CreateItineraryItemRequest request) {
+        ItineraryItem itineraryItem = itineraryItemMapper.toItineraryItem(request);
         itineraryItem = itineraryItemRepository.save(itineraryItem);
+        return itineraryItemMapper.toItineraryItemResponse(itineraryItem);
+    }
+
+    @Override
+    public ItineraryItemResponse updateItineraryItem(Long id, UpdateItineraryItemRequest request) {
+        ItineraryItem itineraryItem = itineraryItemRepository.findById(id)
+                .orElseThrow(() -> new AppException(ErrorCode.ITINERARY_ITEM_NOT_FOUND));
+
+        itineraryItemMapper.updateItineraryItemFromRequest(request, itineraryItem);
+        itineraryItem = itineraryItemRepository.save(itineraryItem);
+
         return itineraryItemMapper.toItineraryItemResponse(itineraryItem);
     }
 
@@ -53,19 +64,6 @@ public class ItinernaryItemServiceImpl implements ItineraryItemService {
     public void deleteItineraryItem(Long id) {
         ItineraryItem itineraryItem = itineraryItemRepository.findById(id)
                 .orElseThrow(() -> new AppException(ErrorCode.ITINERARY_ITEM_NOT_FOUND));
-
         itineraryItemRepository.delete(itineraryItem);
-    }
-
-    @Override
-    public ItineraryItemResponse updateItineraryItem(Long id, ItineraryItemRequest itineraryItemRequest) {
-        ItineraryItem itineraryItem = itineraryItemRepository.findById(id)
-                .orElseThrow(() -> new AppException(ErrorCode.ITINERARY_ITEM_NOT_FOUND));
-
-        itineraryItemMapper.updateItineraryItemFromRequest(itineraryItemRequest, itineraryItem);
-
-        ItineraryItem updated = itineraryItemRepository.save(itineraryItem);
-
-        return itineraryItemMapper.toItineraryItemResponse(updated);
     }
 }
